--- a/index.html
+++ b/index.html
@@ -1,6 +1,31 @@
-<!DOCTYPE html>
-<html>
+<!doctype html>
+<html lang="en">
+<head>
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width,initial-scale=1" />
+  <title>Resume Screening — Live App</title>
+  <style>
+    body { font-family: Inter, system-ui, -apple-system, "Segoe UI", Roboto, "Helvetica Neue", Arial; margin: 4rem; color:#111; }
+    .card { max-width:720px; margin: 2rem auto; padding: 2rem; border-radius: 12px; box-shadow: 0 6px 20px rgba(0,0,0,0.08); background:#fff }
+    h1{ margin:0 0 0.5rem; }
+    p{ color:#333; line-height:1.5 }
+    a.btn { display:inline-block; padding:0.6rem 1rem; background:#2563eb; color:white; border-radius:8px; text-decoration:none; font-weight:600; margin-top:1rem }
+  </style>
+</head>
 <body>
-<h1>Hello from GitHub Pages!</h1>
+  <div class="card">
+    <h1>Resume Screening — Live App</h1>
+    <p>
+      This repository contains a Streamlit app. Streamlit apps cannot run on GitHub Pages.
+      Open the live app via the link below (hosted on your cloud server).
+    </p>
+    <p>
+      <a class="btn" href="http://35.247.89.152:8501" target="_blank" rel="noopener">Open Live App</a>
+    </p>
+    <hr />
+    <p style="font-size:0.9rem; color:#666">
+      If you want this repository to host a static site instead, put the site files (index.html and assets) into the repository and set Pages to use the appropriate branch/folder in Settings → Pages.
+    </p>
+  </div>
 </body>
 </html>
